# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sun-jdk-1.7.0.0_alpha41 (06 Dec 2008)

  06 Dec 2008: Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha41.ebuild -sun-jdk-1.7.0.0_alpha39.ebuild:
  Bump.

*sun-jdk-1.7.0.0_alpha40 (22 Nov 2008)

  22 Nov 2008: Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha40.ebuild -sun-jdk-1.7.0.0_alpha3.ebuild:
  Bump.

*sun-jdk-1.7.0.0_alpha39 (07 Nov 2008)
  
  07 Nov 2008; Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha39.ebuild -sun-jdk-1.7.0.0_alpha37.ebuild:
  Bump.

*sun-jdk-1.7.0.0_alpha38 (27 Oct 2008)

  27 Oct 2008; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha36.ebuild, +sun-jdk-1.7.0.0_alpha38.ebuild
  Bump.

  17 Oct 2008; Serkan Kaba <serkan@gentoo.org>
  -sun-jdk-1.6.0.10_beta32.ebuild, -sun-jdk-1.6.0.10.ebuild:
  In tree.

  17 Oct 2008; Serkan Kaba <serkan@gentoo.org> +sun-jdk-1.6.0.10.ebuild,
  +files/fontconfig.Gentoo.properties:
  Version bump.

*sun-jdk-1.7.0.0_alpha37 (16 Oct 2008)

  16 Oct 2008; Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha37.ebuild, -sun-jdk-1.7.0.0_alpha35.ebuild:
  Bump.

*sun-jdk-1.7.0.0_alpha36.ebuild (28 Sep 2008)

  28 Sep 2008; Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha36.ebuild, -sun-jdk-1.7.0.0_alpha34.ebuild:
  Bump.

*sun-jdk-1.6.0.10_beta32 (16 Sep 2008)

  16 Sep 2008; Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.6.0.10_beta32.ebuild -sun-jdk-1.6.0.10_beta31.ebuild:
  Bump.

*sun-jdk-1.7.0.0_alpha35 (12 Sep 2008)

  12 Sep 2008; Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha35 -sun-jdk-1.7.0.0_alpha33.ebuild:
  Bump.
  sun-jdk-1.7.0.0_alpha34.ebuild:
  Update BASE_URL.

*sun-jdk-1.6.0.10_beta31 (11 Sep 2008)

  11 Sep 2008; Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.6.0.10_beta31.ebuild -sun-jdk-1.6.0.10_beta28.ebuild:
  Bump.

*sun-jdk-1.7.0.0_alpha34 (31 Aug 2008)
