@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Dec 2008; Vlastimil Babka <caster@gentoo.org>
+  +sun-jdk-1.6.0.12_beta2.ebuild:
+  Version bump for a pre-release of sun-jdk 6u12 which finally brings an
+  amd64 browser plugin. Note that you need to sync your main tree to get a
+  recent profile update unmasking the nsplugin flag.
+
 *sun-jdk-1.7.0.0_alpha41 (06 Dec 2008)
 
   06 Dec 2008: Fabian Fingerle <fabian@datensalat.eu>
